# eval

./: .gitignore  DSetMain.hs  FileServer.hs  LICENSE  README.md  StorMain.hs  TestDServ.hs  TestDSet.hs  TestStorage.hs  TestWatcher.hs  eval.cabal  helper.sh  lsd.hs
Eval/: DServ.hs  DSet.hs  Lib.hs  Storage.hs  Types.hs
Eval/low/: App.hs  FileStorage.hs  Node.hs  System.hs
low/: TestNode.hs
test/: TestStorage.sh  makeRecKV.sh
